# MuZO-Clip

./: .gitignore  README.md  pyproject.toml
docs/: BENCHMARKING.md  QK_CLIP_LIMITATIONS_AND_FUTURE_WORK.md
muzo_clip/: __init__.py  block_config.py  data.py  fastpath.py  integration.py  muzo_optimizer.py  newton_schulz.py  parameter_filter.py  prng.py  profiling.py  qk_clip.py  sparse_schedule.py  token_cache.py
scripts/: benchmark_fastpath.py  benchmark_train_variants.py  pretokenize_dataset.py  summarize_benchmarks.py  train_muzo_clip.py
tests/: test_fastpath_rademacher.py  test_newton_schulz_batched.py  test_optimize_scaffolding.py
