[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muzo-clip"
version = "0.1.0"
description = "Experimental Muon-style zeroth-order optimizer with optional QK-Clip stabilization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
]

[project.optional-dependencies]
fast = [
    "triton",
]
train = [
    "transformers",
    "pyarrow",
]
profile = [
    "tensorboard",
]

[tool.setuptools.packages.find]
include = ["muzo_clip*"]
